fix: adjusted text alignment

--- a/apps/provider/src/app/shared/dialogs/message-patient/message-patient.dialog.scss
+++ b/apps/provider/src/app/shared/dialogs/message-patient/message-patient.dialog.scss
@@ -1,4 +1,3 @@
 p {
   margin-bottom: 25px;
-  text-align: center;
 }
